--- a/src/docs/asciidoc/road-to-immutability/077-hidden-content.adoc
+++ b/src/docs/asciidoc/road-to-immutability/077-hidden-content.adoc
@@ -2,12 +2,10 @@
 == Hidden content
 
 In this section, we consider modifications to the hidden content of a type, and explain when they are of importance.
-We give a formal definition of deeply or recursively immutable types, call them _constant_, and introduce the annotation {constant}.
-The annotation {independent}, which we have touched upon earlier, will be formally introduced.
 
 === Visitors
 
-Let's start by going back to `NonEmptyImmutableList`, first defined in <<abstract-methods>>:
+Let's go back to `NonEmptyImmutableList`, first defined in <<abstract-methods>>:
 
 .Example {counter:example}, revisiting `NonEmptyImmutableList`
 [source,java]
@@ -16,11 +14,11 @@ Let's start by going back to `NonEmptyImmutableList`, first defined in <<abstrac
 interface NonEmptyImmutableList<T> extends HasSize {
 
     // implicitly present: @NotModified
-    @Independent
+    @Independent(hc=true)
     T first();
 
     // implicitly present: @NotModified
-    void visit(@Independent Consumer<T> consumer); // @IgnoreModifications
+    void visit(@Independent(hc=true) Consumer<T> consumer);
 
     @NotModified
     @Override
@@ -39,7 +37,7 @@ We start the discussion with the following immutable implementation of this inte
 class ImmutableOne<T> implements NonEmptyImmutableList<T> {
     private final T t;
 
-    public ImmutableOne(@Independent T t) {
+    public ImmutableOne(@Independent(hc=true) T t) {
         this.t = t;
     }
 
@@ -60,28 +58,35 @@ class ImmutableOne<T> implements NonEmptyImmutableList<T> {
 }
 ----
 
-We need the `visit` method (1) to be non-modifying, and (2) not to modify its parameter `consumer`.
+We need the `visit` method to be non-modifying, and also not to modify its parameter `consumer`.
 However, following the normal definitions of modification, the following two statements hold:
 
 1. Because `accept` is {modified}, we should mark the parameter `consumer` as {modified}.
 2. Because `t`, the parameter of `accept`, is {modified}, we should mark `visit` as {modified}.
 
 The result of the first statement would violate the `@Container` property on `ImmutableOne`, and we'd be very reluctant to do that:
-according to the intuitive definition in <<containers>>, `ImmutableOne` is a type that holds data, but does not change it.
+according to the intuitive definition in <<containers>>, `ImmutableOne` is a type that holds data, but does not change the data it's been given.
 This statement still holds in the presence of a `visit` method, which is nothing but a way of exposing the object in a way similar to the method `first`.
-The second one would make `visit` modifying, which again goes against our intuition: looping over elements is, in itself, not modifying.
+The second statement would make `visit` modifying, which again goes against our intuition: looping over elements is, in itself, not modifying.
 
 Luckily, there are two observations that come to the rescue.
 
-First, we believe it is correct to assume that concrete implementations of `Consumer` can be semantically unrelated to `ImmutableOne`.
-As a consequence, we could say that the only modifications that concern us in this `visit` method are the modifications to `accept` 's parameter `t`.
-Other modifications, for example those to the fields of the type in which the implementation is present, may be considered to be outside our scope.
-However, if we replace `Consumer` with `Set` and `accept` with `add`, we encounter a modification that we really do not want to ignore, in an otherwise equal setting.
+First, we believe it is correct to assume that concrete implementations of `Consumer` are semantically
+unrelated to `ImmutableOne`.
+As a consequence, we could say that the only modifications that concern us in this `visit` method, are the
+potential modifications to `accept` 's parameter `t`.
+Other modifications, for example those to the fields of the type in which the implementation is present,
+may be considered to be outside our scope.
+
+However, if we replace `Consumer` by `Set` and `accept` by `add`, we encounter a modification that we really do not
+want to ignore, in an otherwise equal setting.
 Therefore, it does not look like we can reason away potential modifications by `accept`.
 We will have to revert to a contracted {ignoreModifications} annotation on the parameter `consumer`, if we want to avoid `ImmutableOne` losing the `@Container` property.
 
-The second modification, however, is one we will ignore in the `ImmutableOne` type, and _defer_ or _propagate_ to the place where a concrete implementation of the consumer is presented.
-We can ignore it here, because `t` is part of the hidden content of the type; what happens to its content happens outside the zone of control of `ImmutableOne`.
+The second potential source of modifications, however, is one we will ignore in the `ImmutableOne` type,
+and _defer_ or _propagate_ to the place where a concrete implementation of the consumer is presented.
+We can ignore it here, because `t` is part of the hidden content of the type; what happens to
+its content happens outside the zone of control of `ImmutableOne`.
 The fact that it is passed as an argument to a method of `consumer` is reflected by the {independent} annotation.
 It will take care of the propagation of modifications from the concrete implementation into the hidden content.
 
@@ -91,13 +96,15 @@ This results in the following annotations for `visit` in `ImmutableOne`:
 [source,java]
 ----
 @NotModified
-public void visit(@IgnoreModifications @Independent Consumer<T> consumer) {
+public void visit(@IgnoreModifications @Independent(hc=true) Consumer<T> consumer) {
     consumer.accept(t);
 }
 ----
 
-Note that we assume that we will need {ignoreModifications} for almost every use of a functional interface from `java.util.function` occurring as a parameter.
-These types are for generic use; one should never use them to represent some specific data type where modifications are of concern to the current type.
+Note that we assume that we will need {ignoreModifications} for almost every use of a functional interface
+from the package `java.util.function` occurring as a parameter.
+These types are for generic use; one should never use them to represent some specific data type where modifications
+are of concern to the current type.
 Therefore, we make this annotation implicit in exactly this context.
 
 IMPORTANT: A parameter of formal functional interface type will be marked {ignoreModifications} implicitly.
@@ -108,7 +115,7 @@ Looking at the more general case of a `forEach` implementation iterating over a 
 [source,java]
 ----
 @NotModified
-public void forEach(@Independent Consumer<T> consumer) {
+public void forEach(@Independent(hc=true) Consumer<T> consumer) {
     for(T t: list) consumer.accept(t);
 }
 ----
@@ -345,12 +352,200 @@ while(it.hasNext()) {
 
 The iterator `it` content-links to `list`; via the `next` method, it content-links the hidden content of the `list` to `t`.
 
-=== Eventual immutability
 
-How does the whole story of eventually final fields and eventual immutability mix with hidden content?
-At some point, once a necessary precondition has been met, the hidden content will be well-defined, and modifying methods become unavailable.
-Before that, fields that will eventually contain the hidden content may still be `null`, or may be re-assigned.
-This should not have any effect, however, on the computation of hidden content linking, {independent} annotations, and the propagation of modifications, since the actual types do not change.
-The two concepts are sufficiently perpendicular to each other, and can easily co-exist.
+[#independent-type]
+=== Independence of types
+
+A concrete implementation of an iterator is often a nested type, static or not (inner class), of the iterable type:
+
+.Example {counter:example}, implementation of an `Iterator`
+[source,java]
+----
+@ImmutableContainer
+public class ImmutableArray<T> implements Iterable<T> {
+
+    @NotNull1
+    private final T[] elements;
+
+    @SuppressWarnings("unchecked")
+    public ImmutableArray(List<T> input) {
+        this.elements = (T[]) input.toArray();
+    }
+
+    @Override
+    @Independent(hc=true)
+    public Iterator<T> iterator() {
+        return new IteratorImpl();
+    }
+
+    @Container
+    @Independent(hc=true)
+    class IteratorImpl implements Iterator<T> {
+        private int i;
+
+        @Override
+        public boolean hasNext() {
+            return i < elements.length;
+        }
+
+        @Override
+        @NotNull
+        public T next() {
+            return elements[i++];
+        }
+    }
+}
+----
+
+For `ImmutableArray` to be immutable, the `iterator()` method must be independent of the field `elements`, in other words, the `IteratorImpl` object must not expose the `ImmutableArray` 's fields to the outside world.
+It cannot be immutable itself, because it needs to hold the state of the iterator.
+However, it should protect the fields owned by its enclosing type, up to the same standard as required
+for immutability.
+
+We propose to add a definition for the independence of a type, identical to the "shielding off" part of the definition of immutability.
+Let's first go there in a roundabout way:
+
+****
+*Definition*: an *external modification* is a modification, carried out outside the type,
+
+. on a field, directly accessed from the object, or
+. on an argument or return value, executed after the constructor or method call on the object.
+****
+
+Clearly, such external modifications are only possible when the constructor, method or field is non-private.
+
+Armed with this definition, we can define the independence of types:
+
+****
+*Definitions*:
+
+A type is *dependent* when external modifications impact the accessible content of the type.
+
+A type is *independent*, annotated {independent}, when external modifications cannot impact the accessible content of the type.
+The hidden content of the type is mutable or modifiable.
+****
+
+This definition is entirely equivalent to the definition of immutability without rules 0 and 1, and rules 2 and 3 restricted to those fields that are 'exposed' to the outside world via linking or hidden content linking.
+
+A third way of rephrasing the definition would be the following.
+It requires three prior steps:
+
+. Introduce a public getter for every non-private field
+. Define level n independence of a parameter or method return value exactly as level 1 independence for that parameter or method, but then with the parameter type or method return type content linking to that part of the type's hidden content which is level n immutable.
+. Observe that if a type `T` is part of the hidden content of type `C`, then there must be at least one parameter or method return value, of type `P`, which has `T` as part of its content (hidden in `P`, when `T` is hidden rather than transparent in `C`, or either accessible or hidden in `P`, when `T` is transparent).
+
+Then, the independence of a type is the minimum of the independence levels of the parameters and methods of the type.
+
+We hope that rephrasing helps clarify the definition.
+The third way is computationally the most interesting one.
+
+Consider the static variant of `IteratorImpl`, which makes it more obvious that `IteratorImpl` maintains a reference to the element array of its enclosing type:
+
+.Example {counter:example}, implementation of an `Iterator` as a static nested type
+[source,java]
+----
+@E2Container
+public class ImmutableArray<T> implements Iterable<T> {
+    ...
+
+    @Container
+    @Independent1
+    static class IteratorImpl implements Iterator<T> {
+        @Modified
+        private int i;
+
+        private final T[] elements;
+
+        private IteratorImpl(T[] elements) {
+            this.elements = elements;
+        }
+
+        @Override
+        public boolean hasNext() {
+            return i < elements.length;
+        }
+
+        @Override
+        @NotNull
+        @Modified
+        public T next() {
+            return elements[i++];
+        }
+    }
+}
+----
+
+The type `T` is part of the hidden content, the `T[]` and the counter `i` are part of the accessible content.
+No external modification can impact the array or the counter; indeed, only `T` and a `boolean` are exposed.
+The latter is recursively immutable, so does not allow modifications.
+The former allows modifications on the hidden content, whence the {independent1} annotation for `IteratorImpl`.
+
+Immutable types are independent as a type, but a type does not even have to be immutable to be independent.
+In fact, any type communicating via immutable types to the outside world is independent:
+
+.Example {counter:example}, simple getter and setter, independent
+[source,java]
+----
+@Independent
+@Container
+class GetterSetter {
+    private int i;
+
+    public int getI() {
+        return i;
+    }
+
+    public void setI(int i) {
+        this.i = i;
+    }
+}
+----
+
+The following table summarizes the relationship between immutability and independence:
+
+|===
+| |Mutable, Level 1 imm (modifiable) |Level 2 immutable |Level 3 immutable |Level n immutable |Recursively immutable
+
+|Dependent
+|{y} `Set`
+|{n}
+|{n}
+|{n}
+|{n}
+
+|Independent1
+|{y} `Iterator<T>`
+|{y} `Optional<T>`, `Set.of(T)`
+|{n}
+|{n}
+|{n}
+
+|Independent2
+|{y} `Iterator<Optional<T>>`
+|{n}
+|{y} `Set.of(Optional<T>)`
+|{n}
+|{n}
+
+|Independent n-1
+|{y}
+|{n}
+|{n}
+|{y}
+|{n}
+
+|Independent
+|{y} `Writer`, `Iterator<String>`
+|{n}
+|{n}
+|{n}
+|{y} `int`, `String`, `Class`
+|===
+
+There is no need to define different levels of hidden content linking of parameters and fields, beyond "independent or not".
+The important aspect there is whether linking to the hidden content is possible or not.
+Either it is not, or it is structurally impossible.
+The latter is only possible when the type is recursively immutable, which corresponds to the type being independent.
+
 
 //end of file
